--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
-  "start" : {
-    "start" : "node server.js"
+  "scripts": {
+    "start": "nodemon --exec ts-node server.ts"
   },
   "dependencies": {
     "graphql-yoga": "^1.18.3"
+  },
+  "devDependencies": {
+    "@types/node": "^15.3.1",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
